# master-thesis-code

./: .gitignore  README.md  pyproject.toml  train_dreamer.py
configs/: carracing.gin
configs/atari100k_25k_rb/: alien.gin  amidar.gin  assault.gin  asterix.gin  bank_heist.gin  battle_zone.gin  boxing.gin  breakout.gin  chopper_command.gin  crazy_climber.gin  demon_attack.gin  freeway.gin  frostbite.gin  gopher.gin  hero.gin  jamesbond.gin  kangaroo.gin  krull.gin  kung_fu_master.gin  ms_pacman.gin  pong.gin  private_eye.gin  qbert.gin  road_runner.gin  seaquest.gin  up_n_down.gin
configs/atari100k_50k_rb/: alien.gin  amidar.gin  assault.gin  asterix.gin  bank_heist.gin  battle_zone.gin  boxing.gin  breakout.gin  chopper_command.gin  crazy_climber.gin  demon_attack.gin  freeway.gin  frostbite.gin  gopher.gin  hero.gin  jamesbond.gin  kangaroo.gin  krull.gin  kung_fu_master.gin  ms_pacman.gin  pong.gin  private_eye.gin  qbert.gin  road_runner.gin  seaquest.gin  up_n_down.gin
configs/atari100k_actor_critic_wd/: alien.gin  amidar.gin  assault.gin  asterix.gin  bank_heist.gin  battle_zone.gin  boxing.gin  breakout.gin  chopper_command.gin  crazy_climber.gin  demon_attack.gin  freeway.gin  frostbite.gin  gopher.gin  hero.gin  jamesbond.gin  kangaroo.gin  krull.gin  kung_fu_master.gin  ms_pacman.gin  pong.gin  private_eye.gin  qbert.gin  road_runner.gin  seaquest.gin  (+1 more)
experiment_snapshots/: README.md
src/: cart_pole_pixels.py  dreamer.py  encoder.py  envs.py  logger.py  modules.py  multi_env_replay_buffer.py  rssm.py  sigreg.py  trainer.py  utils.py
tests/: dreamer_two_hot_splitting.py  test_avg_wandb.py  test_bootstrap.py  test_continuation_target.py  test_decoder.py  test_replay_buffer.py  test_wandb_download.py  test_wandb_query.py
(+324 files in other folders)
